--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM5961A_Assignments</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="all" href="//cloud.typography.com/7436432/716702/css/fonts.css" />
+    <link rel="stylesheet" href="/style.css">
 
 </head>
 
