--- a/assignment4.html
+++ b/assignment4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM5961A_Assignments</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
@@ -18,7 +18,7 @@
         <!-- Title -->
         <div class="glass"></div>
         <a href="index.html">
-            <img src="/Sources/PAGIUS_WHITE.png" alt="PAGIUS" width="150">
+            <img src="PAGIUS_WHITE.png" alt="PAGIUS" width="150">
         </a>  
 
         <!-- Assignment List -->
