--- a/assignment5.html
+++ b/assignment5.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM5961A_Assignments</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="jquery.color-2.1.2.js"></script>
+    <script src="index.js"></script>
 
 </head>
 
 
-<body>
+<body id="a5">
 
     <!--1. Navigation Bar-->
     <nav id="navbar">
@@ -22,11 +26,11 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html">Assignment I</a></li>
-            <li><a href="assignment2.html">Assignment II</a></li>
-            <li><a href="assignment3.html">Assignment III</a></li>
-            <li><a href="assignment4.html">Assignment IV</a></li>
-            <li><a href="assignment5.html">Assignment V</a></li>
+            <li><a href="assignment1.html" id="a5_hover1" style="color: rgb(175, 175, 175);">Assignment I</a></li>
+            <li><a href="assignment2.html" id="a5_hover2" style="color: rgb(175, 175, 175)">Assignment II</a></li>
+            <li><a href="assignment3.html" style="color: rgb(175, 175, 175);" id="a5_hover3">Assignment III</a></li>
+            <li><a href="assignment4.html" style="color: rgb(175, 175, 175);" id="a5_hover4">Assignment IV</a></li>
+            <li><a href="assignment5.html" id="a5_hover5">Assignment V</a></li>
         </ul>
     </nav>
 
