--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM5961A_Assignments</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="jquery.color-2.1.2.js"></script>
+    <script src="index.js"></script>
 
 </head>
 
@@ -22,11 +26,11 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html">Assignment I</a></li>
-            <li><a href="assignment2.html">Assignment II</a></li>
-            <li><a href="assignment3.html">Assignment III</a></li>
-            <li><a href="assignment4.html">Assignment IV</a></li>
-            <li><a href="assignment5.html">Assignment V</a></li>
+            <li><a href="assignment1.html" id="index_hover1">Assignment I</a></li>
+            <li><a href="assignment2.html#anchor_a2" id="index_hover2">Assignment II</a></li>
+            <li><a href="assignment3.html#anchor_a3" id="index_hover3">Assignment III</a></li>
+            <li><a href="assignment4.html#anchor_a4" id="index_hover4">Assignment IV</a></li>
+            <li><a href="assignment5.html#anchor_a5" id="index_hover5">Assignment V</a></li>
         </ul>
     </nav>
 
@@ -34,8 +38,9 @@
     <!--2. Main-->
     <main>
         <div class="intro">
-            <h2 style="font-size: 50px;">HELLO, I'M PAGIUS! 😊</h2>
-            <p style="font-size: 16px; margin-top: -20px;">I'm a postgraduate student studying at CUHK, and my program is <u style="text-decoration-color: #a48f64;">MS in New Media</u>.</p>
+            <h2 style="font-size: 50px;">DAS IST PAGIUS! 😊</h2>
+            <p style="font-size: 16px; margin-top: -35px;">I'm a postgraduate student studying at CUHK, and my program is MS in New Media.</p>
+            <!-- <u style="text-decoration-color: rgb(198, 68, 61);"></u> -->
             <!-- <p style="font-size: 25px;">However, my undergraduate major was <u style="text-decoration-color: #a48f64;">Biomedical Engineering</u>. 🤯</p>
             <p style="font-size: 25px;">Maybe I've lost my mind. Who knows?</p>
             <p style="font-size: 25px;">Well, I was just kidding. Actually I am always quite enjoying interdisciplinary learning. Possibly I will study <u style="text-decoration-color: #a48f64;">Human-computer Interaction</u> in the future.</p>
