--- a/assignment1.html
+++ b/assignment1.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMM5961A_Assignments</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="jquery.color-2.1.2.js"></script>
+    <script src="index.js"></script>
 
 </head>
 
@@ -22,11 +26,11 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html">Assignment I</a></li>
-            <li><a href="assignment2.html">Assignment II</a></li>
-            <li><a href="assignment3.html">Assignment III</a></li>
-            <li><a href="assignment4.html">Assignment IV</a></li>
-            <li><a href="assignment5.html">Assignment V</a></li>
+            <li><a href="assignment1.html" id="a1_hover1">Assignment I</a></li>
+            <li><a href="assignment2.html" id="a1_hover2" style="color: rgb(175, 175, 175);">Assignment II</a></li>
+            <li><a href="assignment3.html" id="a1_hover3" style="color: rgb(175, 175, 175);">Assignment III</a></li>
+            <li><a href="assignment4.html" id="a1_hover4" style="color: rgb(175, 175, 175);">Assignment IV</a></li>
+            <li><a href="assignment5.html" id="a1_hover5" style="color: rgb(175, 175, 175);">Assignment V</a></li>
         </ul>
     </nav>
 
