--- a/assignment4.html
+++ b/assignment4.html
@@ -27,17 +27,41 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html" id="a4_hover1" style="color: rgb(175, 175, 175);">Assignment I</a></li>
-            <li><a href="assignment2.html" id="a4_hover2" style="color: rgb(175, 175, 175)">Assignment II</a></li>
-            <li><a href="assignment3.html" style="color: rgb(175, 175, 175);" id="a4_hover3">Assignment III</a></li>
-            <li><a href="assignment4.html" id="a4_hover4">Assignment IV</a></li>
-            <li><a href="assignment5.html" id="a4_hover5" style="color: rgb(175, 175, 175);">Assignment V</a></li>
+            <li><a href="assignment1.html#anchor_a1" id="a4_hover1" style="color: rgb(175, 175, 175);">Assignment I</a></li>
+            <li><a href="assignment2.html#anchor_a2" id="a4_hover2" style="color: rgb(175, 175, 175)">Assignment II</a></li>
+            <li><a href="assignment3.html#anchor_a3" style="color: rgb(175, 175, 175);" id="a4_hover3">Assignment III</a></li>
+            <li><a href="assignment4.html#anchor_a4" id="a4_hover4">Assignment IV</a></li>
+            <li><a href="assignment5.html#anchor_a5" id="a4_hover5" style="color: rgb(175, 175, 175);">Assignment V</a></li>
         </ul>
     </nav>
 
     
     <!--2. Main-->
     <main>
+        <div class="intro" id="anchor_a4">
+            <h2 style="font-size: 50px;">Incarico 4</h2>
+            <p style="font-size: 16px; margin-top: -35px;">Fratelli d'Italia, l'Italia s'è desta, dell'elmo di Scipio s'è cinta la testa.</p>
+        </div>
+
+        <div style="font-size: 18px; font-family: optima; color: #222330; margin-top: 100px; margin-left: 200px; margin-right: 200px;">
+
+            <h2 style="font-size: 30px;">Lamentations</h2>
+
+            <p>1:1	  	How doth the city sit solitary, that was full of people! how is she become as a widow! she that was great among the nations, and princess among the provinces, how is she become tributary!</p>
+
+            <p>1:2	  	She weepeth sore in the night, and her tears are on her cheeks: among all her lovers she hath none to comfort her: all her friends have dealt treacherously with her, they are become her enemies.</p>
+
+            <p>1:3	  	Judah is gone into captivity because of affliction, and because of great servitude: she dwelleth among the heathen, she findeth no rest: all her persecutors overtook her between the straits.</p>
+
+            <p>1:4	  	The ways of Zion do mourn, because none come to the solemn feasts: all her gates are desolate: her priests sigh, her virgins are afflicted, and she is in bitterness.</p>
+
+            <p>1:5	  	Her adversaries are the chief, her enemies prosper; for the LORD hath afflicted her for the multitude of her transgressions: her children are gone into captivity before the enemy.</p>
+
+            <p>1:6	  	And from the daughter of Zion all her beauty is departed: her princes are become like harts that find no pasture, and they are gone without strength before the pursuer.</p>
+
+            <p>1:7	  	Jerusalem remembered in the days of her affliction and of her miseries all her pleasant things that she had in the days of old, when her people fell into the hand of the enemy, and none did help her: the adversaries saw her, and did mock at her sabbaths.</p>
+
+		</div>
 
     </main>
 
