--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html" id="index_hover1">Assignment I</a></li>
+            <li><a href="assignment1.html#anchor_a1" id="index_hover1">Assignment I</a></li>
             <li><a href="assignment2.html#anchor_a2" id="index_hover2">Assignment II</a></li>
             <li><a href="assignment3.html#anchor_a3" id="index_hover3">Assignment III</a></li>
             <li><a href="assignment4.html#anchor_a4" id="index_hover4">Assignment IV</a></li>
@@ -38,7 +38,7 @@
     <!--2. Main-->
     <main>
         <div class="intro">
-            <h2 style="font-size: 50px;">DAS IST PAGIUS! 😊</h2>
+            <h2 style="font-size: 50px;">DAS IST PAGIUS!</h2>
             <p style="font-size: 16px; margin-top: -35px;">I'm a postgraduate student studying at CUHK, and my program is MS in New Media.</p>
             <!-- <u style="text-decoration-color: rgb(198, 68, 61);"></u> -->
             <!-- <p style="font-size: 25px;">However, my undergraduate major was <u style="text-decoration-color: #a48f64;">Biomedical Engineering</u>. 🤯</p>
