--- a/assignment3.html
+++ b/assignment3.html
@@ -26,17 +26,48 @@
 
         <!-- Assignment List -->
         <ul>
-            <li><a href="assignment1.html" id="a3_hover1" style="color: rgb(175, 175, 175);">Assignment I</a></li>
-            <li><a href="assignment2.html" id="a3_hover2" style="color: rgb(175, 175, 175)">Assignment II</a></li>
-            <li><a href="assignment3.html" id="a3_hover3">Assignment III</a></li>
-            <li><a href="assignment4.html" id="a3_hover4" style="color: rgb(175, 175, 175);">Assignment IV</a></li>
-            <li><a href="assignment5.html" id="a3_hover5" style="color: rgb(175, 175, 175);">Assignment V</a></li>
+            <li><a href="assignment1.html#anchor_a1" id="a3_hover1" style="color: rgb(175, 175, 175);">Assignment I</a></li>
+            <li><a href="assignment2.html#anchor_a2" id="a3_hover2" style="color: rgb(175, 175, 175)">Assignment II</a></li>
+            <li><a href="assignment3.html#anchor_a3" id="a3_hover3">Assignment III</a></li>
+            <li><a href="assignment4.html#anchor_a4" id="a3_hover4" style="color: rgb(175, 175, 175);">Assignment IV</a></li>
+            <li><a href="assignment5.html#anchor_a5" id="a3_hover5" style="color: rgb(175, 175, 175);">Assignment V</a></li>
         </ul>
     </nav>
 
     
     <!--2. Main-->
     <main>
+        <div class="intro" id="anchor_a3">
+            <h2 style="font-size: 50px;">Abtretung 3</h2>
+            <p style="font-size: 16px; margin-top: -35px;">Deutschland, Deutschland über alles,
+                Über alles in der Welt,
+                Wenn es stets zu Schutz und Trutze
+                Brüderlich zusammenhält.</p>
+        </div>
+
+        <div style="font-size: 18px; font-family: optima; color: #222330; margin-top: 100px; margin-left: 200px; margin-right: 200px;">
+
+            <h2 style="font-size: 30px;">Song of Solomon</h2>
+
+            <p>1:1	  	The song of songs, which is Solomon's.</p>
+
+            <p>1:2	  	Let him kiss me with the kisses of his mouth: for thy love is better than wine.</p>
+
+            <p>1:3	  	Because of the savour of thy good ointments thy name is as ointment poured forth, therefore do the virgins love thee.</p>
+
+            <p>1:4	  	Draw me, we will run after thee: the king hath brought me into his chambers: we will be glad and rejoice in thee, we will remember thy love more than wine: the upright love thee.</p>
+
+            <p>1:5	  	I am black, but comely, O ye daughters of Jerusalem, as the tents of Kedar, as the curtains of Solomon.</p>
+
+            <p>1:6	  	Look not upon me, because I am black, because the sun hath looked upon me: my mother's children were angry with me; they made me the keeper of the vineyards; but mine own vineyard have I not kept.</p>
+
+            <p>1:7	  	Tell me, O thou whom my soul loveth, where thou feedest, where thou makest thy flock to rest at noon: for why should I be as one that turneth aside by the flocks of thy companions?</p>
+
+            <p>1:8	  	If thou know not, O thou fairest among women, go thy way forth by the footsteps of the flock, and feed thy kids beside the shepherds' tents.</p>
+
+            <p>1:9	  	I have compared thee, O my love, to a company of horses in Pharaoh's chariots.</p>
+
+		</div>
 
     </main>
 
