--- a/assignment4.html
+++ b/assignment4.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <script src="jquery.color-2.1.2.js"></script>
+    <script src="jquery_color.js"></script>
     <script src="index.js"></script>
 
 
