--- a/assignment1.html
+++ b/assignment1.html
@@ -11,6 +11,8 @@
     <script src="jquery.color-2.1.2.js"></script>
     <script src="index.js"></script>
 
+    <meta name="google-site-verification" content="p2z0DMp93toZ8roUQuTNo-mMsquIHHCVmR8iw7pJnKc" />
+
 </head>
 
 
