--- a/assignment2.html
+++ b/assignment2.html
@@ -11,6 +11,8 @@
     <script src="jquery_color.js"></script>
     <script src="index.js"></script>
 
+    <meta name="google-site-verification" content="p2z0DMp93toZ8roUQuTNo-mMsquIHHCVmR8iw7pJnKc" />
+
 </head>
 
 
