--- a/assignment3.html
+++ b/assignment3.html
@@ -40,34 +40,25 @@
     <!--2. Main-->
     <main>
         <div class="intro" id="anchor_a3">
-            <h2 style="font-size: 50px;">Abtretung 3</h2>
-            <p style="font-size: 16px; margin-top: -35px;">Deutschland, Deutschland über alles,
-                Über alles in der Welt,
-                Wenn es stets zu Schutz und Trutze
-                Brüderlich zusammenhält.</p>
+            <h2 style="font-size: 50px;">All Game Controllers Assemble Here</h2>
+            <p style="font-size: 16px; margin-top: -35px;">The Times They Are A-Changin'</p>
         </div>
 
         <div style="font-size: 18px; font-family: optima; color: #222330; margin-top: 100px; margin-left: 200px; margin-right: 200px;">
 
-            <h2 style="font-size: 30px;">Song of Solomon</h2>
+            <br>
 
-            <p>1:1	  	The song of songs, which is Solomon's.</p>
+            <p>Video games have two sources. One is art. Immanuel Kant once said that art and game are free, as they don't have specific purposes. The other one is computer. Games merge with computer technology in the digital age, thus leading to the birth of video games.</p>
 
-            <p>1:2	  	Let him kiss me with the kisses of his mouth: for thy love is better than wine.</p>
+            <p>From the perspective of computer, video games can be seen as softwares or contents, and video game consoles as hardwares. Most researches are focused on video games and consoles, but the interface between humans and games are very often neglected. This discipline is called human-computer interaction, and the interface is human interface device, or input device and output device in the computer architecture. Output devices are basically monitors and speakers where humans are passively receiving information, while input devices are like game controllers, in which we can actively take control. Game controllers are good examples for human-computer interaction studies, and this research area is also getting more crucial, not to mention the market size of video games reaching 175.8 billion dollars in 2021.</p>
 
-            <p>1:3	  	Because of the savour of thy good ointments thy name is as ointment poured forth, therefore do the virgins love thee.</p>
+            <p style="text-align: center;"><img src="4-1.jpg" width="600px"></p>
 
-            <p>1:4	  	Draw me, we will run after thee: the king hath brought me into his chambers: we will be glad and rejoice in thee, we will remember thy love more than wine: the upright love thee.</p>
+            <p>As for players, controllers are indispensable and can greatly affect gaming experience. PC players might try something other than keyboard and mouse for certain game genres. Console players are eager to collect different limited versions of controllers. Retro players try hard to seek out legacy controllers in the flea market. Firmly holding a game controller at hand, gamers have a lot to say and many needs to meet.</p>
 
-            <p>1:5	  	I am black, but comely, O ye daughters of Jerusalem, as the tents of Kedar, as the curtains of Solomon.</p>
+            <p>Check out more about the project <a href='https://hkdesign.org/assignment-iii-all-game-controllers-assemble-here/' style="color: rgb(243,176,78)">here</a>.</p>
+            
 
-            <p>1:6	  	Look not upon me, because I am black, because the sun hath looked upon me: my mother's children were angry with me; they made me the keeper of the vineyards; but mine own vineyard have I not kept.</p>
-
-            <p>1:7	  	Tell me, O thou whom my soul loveth, where thou feedest, where thou makest thy flock to rest at noon: for why should I be as one that turneth aside by the flocks of thy companions?</p>
-
-            <p>1:8	  	If thou know not, O thou fairest among women, go thy way forth by the footsteps of the flock, and feed thy kids beside the shepherds' tents.</p>
-
-            <p>1:9	  	I have compared thee, O my love, to a company of horses in Pharaoh's chariots.</p>
 
 		</div>
 
