--- a/assignment4.html
+++ b/assignment4.html
@@ -41,27 +41,29 @@
     <!--2. Main-->
     <main>
         <div class="intro" id="anchor_a4">
-            <h2 style="font-size: 50px;">Incarico 4</h2>
+            <h2 style="font-size: 50px;">Towards a Game Controller Community</h2>
             <p style="font-size: 16px; margin-top: -35px;">Fratelli d'Italia, l'Italia s'è desta, dell'elmo di Scipio s'è cinta la testa.</p>
         </div>
 
         <div style="font-size: 18px; font-family: optima; color: #222330; margin-top: 100px; margin-left: 200px; margin-right: 200px;">
 
-            <h2 style="font-size: 30px;">Lamentations</h2>
+            <br>
 
-            <p>1:1	  	How doth the city sit solitary, that was full of people! how is she become as a widow! she that was great among the nations, and princess among the provinces, how is she become tributary!</p>
+            <p>According to the user research carried out previously, the problem statement is as follows.</p>
 
-            <p>1:2	  	She weepeth sore in the night, and her tears are on her cheeks: among all her lovers she hath none to comfort her: all her friends have dealt treacherously with her, they are become her enemies.</p>
+            <p>How might we make a player with some basic knowledge of video games (who) address the problem of learning more about game controllers and purchasing them (what) so that he could enjoy more about video games and form a hardcore gaming community (why)?</p>
 
-            <p>1:3	  	Judah is gone into captivity because of affliction, and because of great servitude: she dwelleth among the heathen, she findeth no rest: all her persecutors overtook her between the straits.</p>
+            <p style="text-align: center;"><img src="5-1.jpg" width="600px"></p>
 
-            <p>1:4	  	The ways of Zion do mourn, because none come to the solemn feasts: all her gates are desolate: her priests sigh, her virgins are afflicted, and she is in bitterness.</p>
+            <p>Several functional objectives can be extracted from the statement:</p>
 
-            <p>1:5	  	Her adversaries are the chief, her enemies prosper; for the LORD hath afflicted her for the multitude of her transgressions: her children are gone into captivity before the enemy.</p>
+            <p>A. Encyclopedia: knowledge of controllers (history, recommendation, research, etc.)<br>B. Database: Store all sorts of controllers, search<br>C. Purchase: Wish list, cart<br>D. Community: Discuss, comment</p>
 
-            <p>1:6	  	And from the daughter of Zion all her beauty is departed: her princes are become like harts that find no pasture, and they are gone without strength before the pursuer.</p>
+            <p>These functions are scattered on different kinds of websites, and this project is intended to organize them in a more structured and fancy manner.</p>
 
-            <p>1:7	  	Jerusalem remembered in the days of her affliction and of her miseries all her pleasant things that she had in the days of old, when her people fell into the hand of the enemy, and none did help her: the adversaries saw her, and did mock at her sabbaths.</p>
+            <p>Monetization is composed of two solutions. One is to connect the buyers and the sellers, and the platform can charge a decent amount of fees. The other is about paid membership. This will charge the users monthly or yearly, and will offer the customers shopping discounts and access to exclusive high-quality articles or contents. I have referred to community websites like Reddit, and think that paid membership plans are quite hard to implement for communities, so I have to put it aside temporarily. A usability test will also be conducted to test the monetization logic of the users.</p>
+
+            <p>Check out more about the topic <a href='https://hkdesign.org/assignment-iv-towards-a-game-controller-community/' style="color: rgb(243,176,78)">here</a>.</p>
 
 		</div>
 
