--- a/assignment5.html
+++ b/assignment5.html
@@ -40,34 +40,24 @@
     <!--2. Main-->
     <main>
         <div class="intro" id="anchor_a5">
-            <h2 style="font-size: 50px;">終わり</h2>
-            <p style="font-size: 16px; margin-top: -35px;">だめだね　だめよ　だめなのよ
-                あんたが　好きで好きすぎて</p>
+            <h2 style="font-size: 50px;">The End is Near</h2>
+            <p style="font-size: 16px; margin-top: -35px;">But those fancy features are so hard to accomplish...</p>
         </div>
 
         <div style="font-size: 18px; font-family: optima; color: #222330; margin-top: 100px; margin-left: 200px; margin-right: 200px;">
 
-            <h2 style="font-size: 30px;">Psalms</h2>
+            <h2 style="font-size: 30px;"></h2>
 
-            <p>1:1	  	Blessed is the man that walketh not in the counsel of the ungodly, nor standeth in the way of sinners, nor sitteth in the seat of the scornful.</p>
+            <p>Usability tests are updated in order to pay more attention to free and paid membership. Also, the support page tells the difference between these memberships to help the users learn about them more clearly.</p>
 
-            <p>1:2	  	But his delight is in the law of the LORD; and in his law doth he meditate day and night.</p>
+            <div style="width:70%; margin:auto;">
+                <img src="/table.png" style="width:500px;" alt="nah">           
+            </div>
 
-            <p>1:3	  	And he shall be like a tree planted by the rivers of water, that bringeth forth his fruit in his season; his leaf also shall not wither; and whatsoever he doeth shall prosper.</p>
+            <p>Quesions 1-3 are quite easy, regardless of following the navigation bar or the main page. It should be noted that some features are not achieved yet, such as adding goods to the cart or limiting the articles to certain users. Therefore, question 4 and 5 are tested by the users with my explanation. Question 4 is not a good question. As for question 5, the lesson learnt is that I should find the better way to differentiate between different kinds of articles, which are the guides part. They are not organized well. Maybe I should add some icons, which could be more attractive.</p>
 
-            <p>1:4	  	The ungodly are not so: but are like the chaff which the wind driveth away.</p>
-
-            <p>1:5	  	Therefore the ungodly shall not stand in the judgment, nor sinners in the congregation of the righteous.</p>
-
-            <p>1:6	  	For the LORD knoweth the way of the righteous: but the way of the ungodly shall perish.</p>
-
-            <p>2:1	  	Why do the heathen rage, and the people imagine a vain thing?</p>
-
-            <p>2:2	  	The kings of the earth set themselves, and the rulers take counsel together, against the LORD, and against his anointed, saying,</p>
-
-            <p>2:3	  	Let us break their bands asunder, and cast away their cords from us.</p>
-
-            <p>2:4	  	He that sitteth in the heavens shall laugh: the LORD shall have them in derision.</p>
+            <p>What's more, I should really speed up to finish the project. Three parts should be focused on. First is the backend functions like logging in, second is my intended features like 3D models, and the third one is to manage the visual elements in a more user-friendly manner. I paid too much attention to the first two, which are the function part. More contact must to made with the users.</p>
+            
 
 		</div>
 
