--- a/assignment5.html
+++ b/assignment5.html
@@ -51,7 +51,7 @@
             <p>Usability tests are updated in order to pay more attention to free and paid membership. Also, the support page tells the difference between these memberships to help the users learn about them more clearly.</p>
 
             <div style="width:70%; margin:auto;">
-                <img src="/table.png" style="width:500px;" alt="nah">           
+                <img src="table.png" style="width:500px;" alt="nah">           
             </div>
 
             <p>Quesions 1-3 are quite easy, regardless of following the navigation bar or the main page. It should be noted that some features are not achieved yet, such as adding goods to the cart or limiting the articles to certain users. Therefore, question 4 and 5 are tested by the users with my explanation. Question 4 is not a good question. As for question 5, the lesson learnt is that I should find the better way to differentiate between different kinds of articles, which are the guides part. They are not organized well. Maybe I should add some icons, which could be more attractive.</p>
